[package]
name = "hbdm_swap"
version = "0.1.0"
authors = ["QiaoXiaofeng<andyjoe318@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
time = "0.1.38"
ring = "0.13.0-alpha"
hex = "0.3"
base64 = "~0.6.0"
crypto = { version = "0.2.36", package = "rust-crypto" }
serialize = { version = "^0.3", package = "rustc-serialize" }
data-encoding = "2.1.2"
chrono = "^0.4"
percent-encoding = "1.0.1"
log = "0.4.5"
simple_logger = "1.0.1"
tungstenite = "0.9"
url = "2.1"
flate2 = "1.0"
lazy_static = "1.4.0"
rand = "0.7.3"

[lib]
name = "hbdm_swap"
